tests/functional/lang/eval-fail-attrNames-1.err.exp
error:
       … while calling the 'attrNames' builtin
         at /pwd/lang/eval-fail-attrNames-1.nix:1:1:
            1| builtins.attrNames [ ]
             | ^
            2|

       … while evaluating the argument passed to builtins.attrNames

       error: expected a set but found a list: [ ]
